RESOLVED FIXED219839
GPU process sometimes hangs during MotionMark Focus when enabling GPU Process for DOM
https://bugs.webkit.org/show_bug.cgi?id=219839
Summary GPU process sometimes hangs during MotionMark Focus when enabling GPU Process...
Wenson Hsieh
Reported 2020-12-13 12:12:00 PST
(This manifests itself as a crash under this stack, due to backend creation timing out since the GPU process is unresponsive) Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed: 0 WebKit 0x000000010352857c WebKit::ImageBufferShareableIOSurfaceBackend::createImageBufferBackendHandle() const + 24 1 WebKit 0x0000000103206474 WebKit::RemoteLayerBackingStore::encode(IPC::Encoder&) const + 316 2 WebKit 0x0000000103206474 WebKit::RemoteLayerBackingStore::encode(IPC::Encoder&) const + 316 3 WebKit 0x000000010320a050 WebKit::RemoteLayerTreeTransaction::LayerProperties::encode(IPC::Encoder&) const + 1184
Attachments
WIP (10.65 KB, patch)
2020-12-13 13:52 PST, Wenson Hsieh
no flags
Patch (15.74 KB, patch)
2020-12-14 09:23 PST, Wenson Hsieh
no flags
Add Radar URL to ChangeLog (15.77 KB, patch)
2020-12-14 11:04 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-12-13 13:52:27 PST Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2020-12-14 09:23:00 PST
Wenson Hsieh
Comment 3 2020-12-14 10:06:40 PST
Wenson Hsieh
Comment 4 2020-12-14 11:04:54 PST
Created attachment 416174 [details] Add Radar URL to ChangeLog
EWS
Comment 5 2020-12-14 11:55:54 PST
Committed r270796: <https://trac.webkit.org/changeset/270796> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416174 [details].
Note You need to log in before you can comment on or make changes to this bug.